# OpenTraceCapture

./: .gitignore  AUTHORS  CONTRIBUTING.md  COPYING  DRIVER_DEPENDENCY_ANALYSIS.md  Doxyfile  HACKING  MISSING_DEPENDENCIES.md  NEWS  PR137_PORT_SUMMARY.md  PR139_PORT_SUMMARY.md  PR140_PORT_SUMMARY.md  PR145_ANALYSIS.md  PR145_FINAL_STATUS.md  PR145_FULL_PORT_ROADMAP.md  PR145_FULL_REWRITE_SPEC.md  PR145_IMPLEMENTATION_TASKS.md  PR145_MPSSE_IMPLEMENTATION.md  PR145_PATCHES_4-7-9_IMPLEMENTATION.md  PR145_PORT_SUMMARY.md  PR145_PROJECT_SUMMARY.md  PR146_PORT_PLAN.md  PR77_COMMIT_MESSAGE.txt  README.OpenTraceCapture  README.md  UPSTREAM_PR.md  meson.build  meson.options.txt  meson_options.txt
.github/workflows/: ci.yml  pr-verify.yml  release.yml  test-build.yml
bindings/cxx/: ConfigKey_methods.cpp  ConfigKey_methods.hpp  Doxyfile  QuantityFlag_methods.cpp  classes.cpp  enums.py  generate-enums.sh  meson.build  run-doxygen.sh
bindings/cxx/include/libopentracecapturecxx/: enums.hpp  export.hpp  libopentracecapturecxx.hpp
bindings/cxx/include/libsigrokcxx/: libsigrokcxx.hpp
bindings/cxx/swig/: enums.i
bindings/java/: Doxyfile
bindings/python/: Doxyfile
contrib/: 60-opentracecapture.rules
data/udev/: 60-opentracecapture.rules
docs/: PORTED_PR100.md  PORTED_PR102.md  PORTED_PR106.md  PORTED_PR115.md  PORTED_PR77.md  PORTED_PR95.md  PR121_ANALYSIS.md  dslogic-pr170-not-ported.md  pr172-ams515-driver.md  rigol-ds-dso3000-usb-transport.md
include/: strings.h
include/libsigrok/: libsigrok.h
include/opentracecapture/: git-version.h  git-version.h.in  libopentracecapture.h  opentracecapture.h  otc_attrs.h  otc_win_compat.h  posix_compat.h  proto.h  version.h  version.h.in
include/opentracecapture-compat/: libsigrok.h  proto.h  version.h.in
scripts/: vcpkg-ports.txt
src/: analog.c  backend.c  binary_helpers.c  conversion.c  crc.c  device.c  driver_list_start.c  driver_list_stop.c  drivers.c  error.c  ezusb.c  fallback.c  hwdriver.c  libopentracecapture-internal.h  log.c  resource.c  scpi.h  scpi_stubs.c  serial.c  serial_bt.c  serial_ext.c  serial_hid.c  serial_hid.h  serial_hid_bu86x.c  serial_hid_ch9325.c  serial_hid_cp2110.c  serial_hid_victor.c  serial_libsp.c  serial_tcpraw.c  session.c  session_driver.c  session_file.c  soft-trigger.c  std.c  strutil.c  stubs.c  sw_limits.c  tcp.c  trigger.c  usb.c  (+1 more)
src/bt/: bt_bluez.c
src/core/: meson.build
src/dmm/: asycii.c  bm25x.c  bm52x.c  bm85x.c  bm86x.c  dtm0660.c  eev121gw.c  es519xx.c  fs9721.c  fs9922.c  m2110.c  metex14.c  mm38xr.c  ms2115b.c  ms8250d.c  qm1578.c  rs9lcd.c  ut372.c  ut71x.c  vc870.c  vc96.c
src/drivers/: meson.build
src/formats/: meson.build
src/hardware/agilent-dmm/: api.c  protocol.c  protocol.h
src/hardware/aim-tti-dps/: api.c  meson.build  protocol.c  protocol.h
src/hardware/appa-55ii/: api.c  protocol.c  protocol.h
src/hardware/appa-dmm/: api.c  meson.build  protocol.c  protocol.h  protocol_packet.h  protocol_tables.h
src/hardware/arachnid-labs-re-load-pro/: api.c  protocol.c  protocol.h
src/hardware/asix-omega-rtm-cli/: api.c  protocol.c  protocol.h
src/hardware/asix-sigma/: api.c  protocol.c  protocol.h
src/hardware/atorch/: api.c  protocol.c  protocol.h
src/hardware/atten-pps3xxx/: api.c  protocol.c  protocol.h
src/hardware/baylibre-acme/: api.c  gpio.c  gpio.h  protocol.c  protocol.h
src/hardware/beaglelogic/: api.c  beaglelogic.h  beaglelogic_native.c  beaglelogic_tcp.c  protocol.c  protocol.h
src/hardware/bkprecision-1856d/: api.c  protocol.c  protocol.h
src/hardware/cem-dt-885x/: api.c  protocol.c  protocol.h
src/hardware/center-3xx/: api.c  protocol.c  protocol.h
src/hardware/chronovu-la/: api.c  protocol.c  protocol.h
src/hardware/colead-slm/: api.c  protocol.c  protocol.h
src/hardware/conrad-digi-35-cpu/: api.c  protocol.c  protocol.h
src/hardware/dcttech-usbrelay/: api.c  protocol.c  protocol.h
src/hardware/demo/: api.c  protocol.c  protocol.h
src/hardware/devantech-eth008/: api.c  protocol.c  protocol.h
src/hardware/dreamsourcelab-dslogic/: api.c  protocol.c  protocol.h
src/hardware/fluke-45/: api.c  protocol.c  protocol.h
src/hardware/fluke-dmm/: api.c  fluke-18x.c  fluke-190.c  fluke-28x.c  protocol.c  protocol.h
src/hardware/francaise-instrumentation-ams515/: api.c  protocol.c  protocol.h
src/hardware/ftdi-la/: api.c  protocol.c  protocol.h
src/hardware/fx2lafw/: api.c  protocol.c  protocol.h
src/hardware/gmc-mh-1x-2x/: api.c  protocol.c  protocol.h
src/hardware/greatfet/: api.c  protocol.c  protocol.h
src/hardware/gwinstek-gds-800/: api.c  protocol.c  protocol.h
src/hardware/gwinstek-gpd/: api.c  protocol.c  protocol.h
src/hardware/gwinstek-psp/: api.c  protocol.c  protocol.h
src/hardware/hameg-hmo/: api.c  protocol.c  protocol.h
src/hardware/hantek-4032l/: api.c  protocol.c  protocol.h
src/hardware/hantek-6xxx/: api.c  protocol.c  protocol.h
src/hardware/hantek-dso/: api.c  protocol.c  protocol.h
src/hardware/hp-3457a/: api.c  protocol.c  protocol.h
src/hardware/hp-3478a/: api.c  protocol.c  protocol.h
src/hardware/hp-59306a/: api.c  (+2 more)
src/input/: binary.c  chronovu_la8.c  csv.c  feed_queue.c  input.c  input_minimal.c  isf.c  logicport.c  meson.build  null.c  protocoldata.c  raw_analog.c  saleae.c  stf.c  trace32_ad.c  vcd.c  wav.c
src/lcr/: es51919.c  vc4080.c
src/modbus/: modbus.c  modbus_serial_rtu.c
src/output/: analog.c  ascii.c  binary.c  bits.c  chronovu_la8.c  csv.c  hex.c  meson.build  null.c  ols.c  output.c  output_minimal.c  srzip.c  vcd.c  wav.c  wavedrom.c
src/scale/: kern.c  otc_uss_dbs.c  uss_dbs.c
src/scpi/: scpi.c  scpi_libgpib.c  scpi_serial.c  scpi_tcp.c  scpi_usbtmc_libusb.c  scpi_visa.c  scpi_vxi.c  vxi_clnt.c
src/tp/: appa.c  appa.h  meson.build
src/transform/: invert.c  meson.build  nop.c  scale.c  transform.c  transform_minimal.c
tests/: analog.c  conv.c  core.c  device.c  driver_all.c  input_all.c  input_binary.c  lib.c  lib.h  main.c  output_all.c  session.c  smoke.c  strutil.c  transform_all.c  trigger.c  version.c
tools/: port-upstream-prs.sh
(+195 files in other folders)
