format_sources = files(
  # Input handling
  '../input/input_minimal.c',
  '../input/binary.c',
  '../input/null.c',
  '../input/vcd.c',
  '../input/wav.c',
  
  # Output handling
  '../output/output_minimal.c',
  '../output/binary.c',
  '../output/csv.c',
  '../output/vcd.c',
  
  # Transform modules
  '../transform/transform_minimal.c',
  '../transform/nop.c',
  '../transform/scale.c',
  '../transform/invert.c',
)
