format_sources = files(
  # Input handling
  '../input/binary.c',
  '../input/null.c',
  '../input/vcd.c',
  '../input/wav.c',
  
  # Output handling
  '../output/binary.c',
  '../output/csv.c',
  '../output/vcd.c',
  
  # Transform modules
  '../transform/nop.c',
  '../transform/scale.c',
  '../transform/invert.c',
)
